--- a/codux.config.json
+++ b/codux.config.json
@@ -23,5 +23,11 @@
   "styling": {
     "solution": "scss modules"
   },
-  "svgLoader": "both"
+  "svgLoader": "both",
+  "addPanel": {
+        "assets": [
+            "@codux-boards/react-nivo",
+            "hellooosafdasc"
+        ]
+    }
 }
